# jenkins-pipeline

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml
demo_app/: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  Makefile  README  main.c
demo_app/env/: Dockerfile  Jenkinsfile
demo_app/src/: CMakeLists.txt  Calculator.cpp  Calculator.h  CalculatorApp  main.cpp
demo_app/test/: CMakeLists.txt  TestCalculator.cpp
jenkins_home/: README
